--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <title>Mind Your Mind</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
@@ -70,7 +67,7 @@
             <p>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect...</p>
           </div>
           <button class="tablink" onclick="openTab('tab1', this, 'red')" id="defaultOpen">Mission</button>
-          <button class="tablink" onclick="openTab('tab2', this, 'green')">Vission</button>
+          <button class="tablink" onclick="openTab('tab2', this, 'green')">Vision</button>
           <button class="tablink" onclick="openTab('tab3', this, 'purple')">Values</button>
           <button class="tablink" onclick="openTab('tab4', this, 'orange')">More</button>
         </div>
@@ -165,7 +162,7 @@
           </div>
             <div class="column">
               <div class="text-field-area-">
-                <label for="user">Mesagge:</label>
+                <label for="user">Message:</label>
                 <textarea id="message" name="message" rows="6" cols="50" required></textarea>
               </div>
               <div class="button">
