--- a/index.html
+++ b/index.html
@@ -37,13 +37,19 @@
     </nav>
 
     <div class="container-fluid container">
-      <div class="text-alt">
-          <h2>Healthy Body, Healthy Mind</h2>
-          <strong>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect... </strong><br> 
+      <div class="row">
+        <div class="col-sm">
+          <div class="text-alt">
+            <h2>Healthy Body, Healthy Mind</h2>
+           <strong>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect... </strong><br> 
+         </div>
       </div>
-      <div>
-        <img class="brain" src="./img/brain.jpg" alt="brain" >
-      </div>
+     <div class="col-sm">
+        <div>
+          <img class="brain" src="./img/brain.jpg" alt="brain" >
+        </div>
+    </div>
+    </div>
     </div>
 
 
@@ -120,7 +126,7 @@
   </div>
   <div id="gallery-modal" class="thumbnail-modal" onclick="this.style.display='none'">
     <span class="close">&times;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-      <div class="modal-content">
+      <div class="modalcontent">
         <img id="modal-img" style="max-width:100%">
       </div>
   </div>
