--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
       <div class="about" id="about">
         <div class="container"><h3>About us</h3>
           <div id="tab1" class="tabcontent">
-            <p>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect...</p>
+            <p>“To protect the health and right to health of the individual and society at the highest level with a human-centred approach, to provide timely, appropriate and effective solutions to health problems with high service quality.”</p>
           </div>
           <div id="tab2" class="tabcontent">
-            <p>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect...</p>
+            <p>“A world where a healthy lifestyle is adopted and everyone can access their right to health easily and with high service quality. We constantly re-evaluate and apply these ideas. We know our job well, and we always aim for the better.”</p>
           </div>
           <div id="tab3" class="tabcontent">
-            <p>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect...</p>
+            <p>"We care about individuals and understand their needs. We will be with them in a friendly, conciliatory and long-term manner. We help individuals improve their health by providing insight and expertise. We are the preferred healthcare partner."</p>
           </div>
           <div id="tab4" class="tabcontent">
-            <p>Health, which is the most valuable thing a person can have, can only exist fully with the unity of body and mind. In other words, a healthy body and mind are necessary for a healthy life. Without one of these, it is not possible to talk about health. So, what can we do for a healthier body and mind? Here's to gaining your body and mind health; more importantly, some suggestions you can apply to protect...</p>
+            <p>"We are passionate about helping everyone who works with us advance in health in a courageous, dedicated and progressive way. We always keep our views and goals high; because we know, it's worth it".</p>
           </div>
           <button class="tablink" onclick="openTab('tab1', this, 'red')" id="defaultOpen">Mission</button>
           <button class="tablink" onclick="openTab('tab2', this, 'green')">Vision</button>
